tests/baselines/reference/classIndexer2.errors.txt
==== tests/cases/compiler/classIndexer2.ts (1 errors) ====
    class C123 {
        [s: string]: number;
        x: number;
        y: string;
        ~~~~~~~~~~
!!! classIndexer2.ts(4,5): error TS2171: All named properties must be assignable to string indexer type 'number'.
        constructor() {
        }
    }